Add workflow documentation and enhance pipeline configuration
- Introduced WORKFLOW.md to outline the end-to-end process from data setup to Kaggle submission.
- Updated .env.example to include configuration options for LLM provider (OpenAI and Ollama) and respective model settings.
- Enhanced pipeline.py to support multiple LLM providers and improved configuration handling.
- Revised README.md to clarify usage instructions for LLM extraction and environment setup.
- Updated requirements.txt to include requests library for API interactions.

--- a/Submissions/my_submission/.env.example
+++ b/Submissions/my_submission/.env.example
@@ -1,2 +1,10 @@
-# Copy to .env and add your key. Never commit .env.
+# LLM provider: openai | ollama | (empty = placeholder only)
+LLM_PROVIDER=openai
+
+# --- OpenAI (when LLM_PROVIDER=openai) ---
 OPENAI_API_KEY=sk-your-key-here
+OPENAI_MODEL=gpt-4o-mini
+
+# --- Ollama (when LLM_PROVIDER=ollama) ---
+OLLAMA_MODEL=llama3.2
+OLLAMA_BASE_URL=http://localhost:11434
