Implement SDRF extraction enhancements and documentation updates
- Added USE_BATCH configuration option in .env.example to control batch processing behavior.
- Introduced IMPROVEMENTS.md to provide guidance on optimizing scores in the competition.
- Created kaggle_notebook.ipynb for running the extraction pipeline directly in Kaggle.
- Updated README.md to reflect new features and usage instructions for the SDRF extraction pipeline.
- Enhanced pipeline.py to support expected column names in API requests for improved extraction accuracy.
- Compressed submission files into my_submission.zip for easier distribution.

--- a/Submissions/my_submission/.env.example
+++ b/Submissions/my_submission/.env.example
@@ -8,3 +8,6 @@ OPENAI_MODEL=gpt-4o-mini
 # --- Ollama (when LLM_PROVIDER=ollama) ---
 OLLAMA_MODEL=llama3.2
 OLLAMA_BASE_URL=http://localhost:11434
+
+# --- Quality vs cost: 1 = batch (one request), 0 = per-PXD (full manuscript each)
+USE_BATCH=0
